--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,3 +1,6 @@
+.cart {
+  background-color: #e5e5e5 !important;
+}
 .sticky-top {
   top: -1px !important;
 }
@@ -12,4 +15,13 @@
 }
 #section1 {
   background-repeat: no-repeat;
+}
+.cart-body__products-item {
+  .input-group {
+    width: 100px;
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+    }
+  }
 }
