feat: add modal product page

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -6,12 +6,18 @@
   top: -1px !important;
 }
 
+.products-section__item .test:hover > .card-body {
+  background-color: #d3ddea;
+}
 .products-section__item .card {
   border: none;
 }
 .products-section__item .card-body {
   padding: 1rem 0.5rem;
   border: none;
+  transition: 0.3s;
+  border-bottom-left-radius: var(--bs-card-inner-border-radius);
+  border-bottom-right-radius: var(--bs-card-inner-border-radius);
 }
 
 #section1 {
