feat: Cart and Order in Main Route. Before Vuex integration

--- a/vueApp/src/assets/style/main.css
+++ b/vueApp/src/assets/style/main.css
@@ -1,26 +1,50 @@
-button:focus {
+button:focus,
+input:focus {
   box-shadow: none !important;
+}
+
+#alertPlaceholder {
+  top: 4.5rem !important;
+}
+#alertPlaceholder .notifications-box {
+  position: absolute;
+  width: 300px;
+  right: 0;
+}
+#alertPlaceholder .alert {
+  margin-right: 12px;
 }
 
 .cart {
   background-color: #e5e5e5 !important;
+}
+.cart .delete-product-ico {
+  opacity: 0.8;
+  cursor: pointer;
+}
+.cart .delete-product-ico:hover {
+  opacity: 1;
 }
 
 .sticky-top {
   top: -1px !important;
 }
 
-.products-section__item .card:hover > .card-body {
+.products-section__item .card-img-top:hover ~ .card-body {
   background-color: #e3e1e1;
 }
 .products-section__item .card {
   border: none;
+}
+.products-section__item .card-img-top {
   cursor: pointer;
 }
 .products-section__item .card-body {
   padding: 1rem 0.5rem;
-  border: none;
   transition: 0.3s;
+}
+.products-section__item .description {
+  min-height: 72px;
 }
 
 #section1 {
@@ -46,6 +70,17 @@ button:focus {
 .nav-tabs .nav-item .nav-link.active {
   background-color: rgba(var(--bs-light-rgb)) !important;
   border-bottom: 1px solid var(--bs-light);
+}
+
+.product_count {
+  max-width: 100px;
+}
+.product_count input {
+  text-align: center;
+}
+.product_count input::-webkit-outer-spin-button,
+.product_count input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
 
 /*# sourceMappingURL=main.css.map */
