--- a/vueApp/src/assets/style/main.scss
+++ b/vueApp/src/assets/style/main.scss
@@ -9,6 +9,8 @@ input:focus {
     position: absolute;
     width: 300px;
     right: 0;
+    display: flex;
+    flex-direction: column;
   }
   .alert {
     margin-right: 12px;
@@ -19,10 +21,12 @@ input:focus {
   background-color: #e5e5e5 !important;
   .delete-product-ico {
     opacity: 0.8;
+    transition: .2s;
     cursor: pointer;
   }
   .delete-product-ico:hover {
-    opacity: 1;
+    transition: .2s;
+    fill: red;
   }
 }
 .sticky-top {
@@ -51,7 +55,6 @@ input:focus {
 }
 .cart-body__products-item {
   .input-group {
-    width: 100px;
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button {
       -webkit-appearance: none;
